# FundVersee

./: .env  Cargo.toml  FRONTEND_INTEGRATION_GUIDE.md  FundVerse_backend.did  INTEGRATION_GUIDE.md  PROJECT_CREATION_REFACTOR.md  README.md  dfx.json  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/Admin/: Admin.wasm  (+4 more)
.dfx/local/lsp/: u6s2n-gx777-77774-qaaba-cai.did  ulvla-h7777-77774-qaacq-cai.did
src/Admin/src/: lib.rs
src/Controller/: Cargo.toml
src/Controller/src/: lib.rs
src/FundVerse_backend/: FundVerse_backend.did
src/FundVerse_backend/src/: lib.rs
src/FundVerse_frontend/: index.html  package.json  tsconfig.json  vite.config.ts
src/FundVerse_frontend/src/: App.tsx  index.css  main.tsx
src/PaymentGateway/: Cargo.toml  PaymentGateway.did
src/PaymentGateway/src/: lib.rs
src/SPV/: Cargo.toml  SPV.did
src/SPV/src/: lib.rs
src/Spv_Token/: Cargo.toml
src/Spv_Token/src/: lib.rs
src/declarations/Admin/: Admin.did  Admin.did.d.ts  Admin.did.js  index.d.ts  index.js
src/declarations/Controller/: Controller.did.js  index.d.ts  index.js
src/declarations/FundVerse_backend/: FundVerse_backend.did.d.ts  FundVerse_backend.did.js  index.d.ts  index.js
src/declarations/FundVerse_frontend/: index.d.ts  index.js
src/declarations/Fund_Flow/: Fund_Flow.did.d.ts  index.d.ts  index.js
src/declarations/PaymentGateway/: PaymentGateway.did  PaymentGateway.did.js  index.d.ts  index.js
src/declarations/SPV/: SPV.did.d.ts  SPV.did.js  index.d.ts  index.js
src/declarations/Spv_Token/: index.d.ts  index.js
(+53 files in other folders)
